# wygg

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: yarn.yml
src/: main.rs  yggdrasil.rs
www/: .gitignore  index.js  package.json  tsconfig.json
www/src/: Main.elm  Page.elm  Route.elm  Session.elm  breadcrumbs.ts  component.ts  footer.ts  header.ts  home.ts  index.css  index.html  index.ts  node.ts  notfound.ts  peers.ts  router.ts  template.ts
www/src/Page/: Blank.elm  Node.elm  NotFound.elm  Peers.elm
www/src/lib/component/: component.ts
www/src/lib/network/: network.ts
www/src/lib/router/: router.ts
www/src/lib/template/: template.ts
www/src/map/: map.ts
www/src/node/: connections.ts  node.ts  overview.ts
www/src/peers/: connections.ts  peers.ts
www/src/static/manifest/: site.webmanifest
www/src/vdom/: diff.ts  elements.ts  index.ts  ops.ts  patches.ts  render.ts  scene.ts  types.ts
